--- a/config.toml
+++ b/config.toml
@@ -97,9 +97,14 @@ id = "UA-00000000-0"
 
 # Everything below this are Site Params
 
+[outputFormats]
+[outputFormats.jsonlist]
+baseName = 'list'
+mediaType = 'application/json'
+
 # Comment out if you don't want the "print entire section" link enabled.
 [outputs]
-section = ["HTML"] #"print"
+section = ["HTML", "jsonlist"] #"print"
 
 [params]
 copyright = "Puppet"
