(MAINT) Add dev.to link

--- a/config.toml
+++ b/config.toml
@@ -201,7 +201,12 @@ enable = false
 	name = "Slack"
 	url = "https://puppetcommunity.slack.com/"
 	icon = "fab fa-slack"
-        desc = "Chat with other project developers"
+        desc = "Chat with us!"
+[[params.links.user]]
+	name = "Dev.to"
+	url = "https://dev.to/puppet"
+	icon = "fa fa-blog"
+        desc = "See what others are saying."
 # Developer relevant links. These will show up on right side of footer and in the community page if you have one.
 [[params.links.developer]]
 	name = "GitHub"
