Link to the slack invitebot
This lets people join the community themselves.

--- a/config.toml
+++ b/config.toml
@@ -199,7 +199,7 @@ enable = false
         desc = "Follow us on Twitter to get the latest news!"
 [[params.links.user]]
 	name = "Slack"
-	url = "https://puppetcommunity.slack.com/"
+	url = "https://slack.puppet.com/"
 	icon = "fab fa-slack"
         desc = "Chat with us!"
 [[params.links.user]]
