(MAINT) Homepage revamp
This commit adds a flexbox of cards to the homepage which display recently
published blog posts. It is also possible to pin one blog post to this
section using the `[params.home].pinnedPost` variable which has been added to the
site's `config.toml`.

Furthermore, a new heading and subheading has been added to the homepage and
the main contents of the page has been changed.

--- a/config.toml
+++ b/config.toml
@@ -218,6 +218,9 @@ enable = false
 #         url = "https://github.com/orgs/modules/people"
 #         icon = "fa fa-user-friends"
 #         desc = "Project Maintainers"
+[params.home] # Takes a RelPermalink e.g. "/content-and-tooling-team/blog/posts/return-of-community-day/"
+pinnedPost = "/content-and-tooling-team/blog/posts/prm-0-2-0-release/"
+
 
 # Import of modules
 [module]
