(CONT-177) - Migration of Litmus docs
Prior to this commit the documentation for litmus was stored in https://github.com/puppetlabs/litmus.
This commit aims to migrate this documentation to the CAT team site.

This commit:
- Migrates the litmus documentation to the CAT team site
- Configures the project to point to and retrieve the documentation from its new location
- Introduces styling to the litmus documentation that is more consistent with that of other documentation present on the site

--- a/config.toml
+++ b/config.toml
@@ -235,10 +235,18 @@ pinnedPost = ""
 [[module.imports]]
   ignoreImports = true
   ignoreConfig = true
-  path = 'github.com/puppetlabs/prm/docs/md'  # Change to correct Git URI
+  path = 'github.com/puppetlabs/prm/docs/md'
   [[module.imports.mounts]]
     source = 'content'
     target = 'content/docs/prm/'
+
+[[module.imports]]
+  ignoreImports = true
+  ignoreConfig = true
+  path = 'github.com/puppetlabs/puppet_litmus/docs/md'
+  [[module.imports.mounts]]
+    source = 'content'
+    target = 'content/docs/litmus/'
 
 [privacy]
   [privacy.googleAnalytics]
